{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 29,
  "lineage": "0d8ecdac-c1e3-7a19-66a1-8e9c5fbd6bc3",
  "resources": [
    {
      "module": "module.ascentt-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-priv-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d56f8956ab235b3",
            "arn": "arn:aws:ec2:us-east-1:752181287490:instance/i-0283b1183ce29d8ae",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0283b1183ce29d8ae",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "virginia-livux-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0a2ed1d8816760c09",
            "private_dns": "ip-10-7-5-30.ec2.internal",
            "private_ip": "10.7.5.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cf31cf88d8b800a0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009f3d5b74d1d3462",
            "tags": {
              "Name": "terra_instance-Private"
            },
            "tags_all": {
              "Name": "terra_instance-Private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0848abec591ef679e"
            ]
          },
          "dependencies": [
            "module.ascentt-vpc.aws_security_group.mySG",
            "module.ascentt-vpc.aws_subnet.private",
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "test-pub-EC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09d56f8956ab235b3",
            "arn": "arn:aws:ec2:us-east-1:752181287490:instance/i-035250d2671050eb4",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-035250d2671050eb4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "key_name": "virginia-livux-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf1bacac129c9492",
            "private_dns": "ip-10-7-2-156.ec2.internal",
            "private_ip": "10.7.2.156",
            "public_ip": "35.173.185.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-015cc736c2a950fba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0817c6ffebd10e4b0",
            "tags": {
              "Name": "terra_instance-Public"
            },
            "tags_all": {
              "Name": "terra_instance-Public"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0848abec591ef679e"
            ]
          },
          "dependencies": [
            "module.ascentt-vpc.aws_security_group.mySG",
            "module.ascentt-vpc.aws_subnet.public",
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:internet-gateway/igw-0257ba66967a74f98",
            "id": "igw-0257ba66967a74f98",
            "owner_id": "752181287490",
            "tags": {
              "Name": "terra-IGW"
            },
            "tags_all": {
              "Name": "terra-IGW"
            },
            "vpc_id": "vpc-0264513fad51379ad"
          },
          "dependencies": [
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:route-table/rtb-0363ad8aae595b646",
            "id": "rtb-0363ad8aae595b646",
            "owner_id": "752181287490",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Private-RT"
            },
            "tags_all": {
              "Name": "Private-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264513fad51379ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:route-table/rtb-0de0e18bcc4f958de",
            "id": "rtb-0de0e18bcc4f958de",
            "owner_id": "752181287490",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0257ba66967a74f98",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0257ba66967a74f98",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264513fad51379ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ascentt-vpc.aws_internet_gateway.igw",
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07eb2ceec87cd71f5",
            "route_table_id": "rtb-0363ad8aae595b646",
            "subnet_id": "subnet-009f3d5b74d1d3462"
          },
          "dependencies": [
            "module.ascentt-vpc.aws_route_table.private-RT",
            "module.ascentt-vpc.aws_subnet.private",
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05343c167516d68f9",
            "route_table_id": "rtb-0de0e18bcc4f958de",
            "subnet_id": "subnet-0817c6ffebd10e4b0"
          },
          "dependencies": [
            "module.ascentt-vpc.aws_internet_gateway.igw",
            "module.ascentt-vpc.aws_route_table.public-RT",
            "module.ascentt-vpc.aws_subnet.public",
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mySG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:security-group/sg-0848abec591ef679e",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0848abec591ef679e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "my-SG",
            "name_prefix": "",
            "owner_id": "752181287490",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terra-module-SG"
            },
            "tags_all": {
              "Name": "terra-module-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0264513fad51379ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:subnet/subnet-009f3d5b74d1d3462",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.7.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-009f3d5b74d1d3462",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "752181287490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet"
            },
            "tags_all": {
              "Name": "private-subnet"
            },
            "vpc_id": "vpc-0264513fad51379ad"
          },
          "dependencies": [
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:subnet/subnet-0817c6ffebd10e4b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.7.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0817c6ffebd10e4b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "752181287490",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet"
            },
            "tags_all": {
              "Name": "public-subnet"
            },
            "vpc_id": "vpc-0264513fad51379ad"
          },
          "dependencies": [
            "module.ascentt-vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ascentt-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:752181287490:vpc/vpc-0264513fad51379ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.7.0.0/16",
            "default_network_acl_id": "acl-0e912675f94eed850",
            "default_route_table_id": "rtb-00d5a602a277551a9",
            "default_security_group_id": "sg-0ec756d98c640fcab",
            "dhcp_options_id": "dopt-53b9eb2a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0264513fad51379ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d5a602a277551a9",
            "owner_id": "752181287490",
            "tags": {
              "Name": "terra-module-vpc"
            },
            "tags_all": {
              "Name": "terra-module-vpc"
            }
          }
        }
      ]
    }
  ]
}